--- a/styleSheets/style.css
+++ b/styleSheets/style.css
@@ -1,6 +1,10 @@
 @import "reset.css";
 @import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic";
+@import "social-likes_birman.css";
 
 
+@import "layout.css";
 
 @import "landing.css";
+@import "menubar.css";
+@import "ui.css";
