Ничего не работает, хочется убиться

--- a/styleSheets/menubar.css
+++ b/styleSheets/menubar.css
@@ -1,18 +1,25 @@
 .menubar {
   width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 1;
+}
+
+
+.menubar {
   width: 100%;
+}
+
+.menubar div {
+  z-index: 1;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
   background-color:  white;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .menubar div {
-  display: flex;
-  align-items: center;
-  height: 60px;
 }
 
 .logo {
