--- a/styleSheets/landing.css
+++ b/styleSheets/landing.css
@@ -48,20 +48,36 @@ body.landing.bg {
 
 .mainSection.center footer {
   position: absolute;
+  margin: auto;
   bottom: 0;
-  right: 0;
   width: 100%;
-  padding-bottom: 35px;
+  min-width: 768px;
+  text-align: center;
+  padding-bottom: 37px;
 }
 
 .mainSection.center footer p {
   font-size: 16px;
 }
 
-.mainSection.right,
-.mainSection.center {
-  /*background-color: */
+
+
+
+.mainSection section figure {
+  margin: 58px 0 0 -60px;
+  width: 30px;
+  height: 4px;
+  background-color: #00ffe5;
 }
+
+.mainSection.left section figure {
+  margin-left: 0px;
+}
+
+.mainSection.right section figure {
+  margin-right: 100px;
+}
+
 
 h2 {
   font-family: 'PT Sans Caption', sans-serif;
@@ -77,10 +93,33 @@ p {
   line-height: 36px;
 }
 
+/*.mainSection.right,
+.mainSection.center {
+  background-color: #879696;
+}
+
+.mainSection.left {
+  background-color: #fcfffe;
+}*/
+
+/*.mainSection.left p,
+.mainSection.left h2 {
+  color: #323332;
+}
+
+.mainSection.right h2,
+.mainSection.right p,
+.mainSection.center h2,
+.mainSection.center p {
+  color: #ffffff;
+}*/
+
+
 .mockup {
   position: absolute;
   background-size: cover;
 }
+
 
 #mockup1 {
   position: relative;
@@ -97,7 +136,7 @@ p {
   height: 317px;
   top: 193px;
   left: 160px;
-  /*box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);*/
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);
   background-image: url(../images/Posts/about.png);
 }
 
@@ -106,7 +145,7 @@ p {
   height: 395px;
   top: 193px;
   left: 333px;
-  /*box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);*/
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);
   background-image: url(../images/Posts/works.png);
 }
 
@@ -115,7 +154,7 @@ p {
   height: 474px;
   top: 193px;
   left: 506px;
-  /*box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);*/
+  box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.1);
   background-image: url(../images/Posts/work.png);
 }
 
@@ -125,6 +164,22 @@ p {
   height: 404px;
   top: 343px;
   right: -640px;
-  /*box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);*/
   background-image: url(../images/Posts/screens.png);
+}
+
+@media screen and (max-width: 1460px) {
+  .landingWraper {
+    width: 100%
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .landing.bg {
+    background-image: url(../images/Mockups/1180 First Breakpoint.png);
+  }
+
+  .mainSection {
+    width: 1180px;
+    height: 568px;
+  }
 }
