--- a/styleSheets/ui.css
+++ b/styleSheets/ui.css
@@ -1,20 +1,22 @@
 .btn {
+  display: block;
   text-align: center;
-
+  margin: auto;
+  margin-top: -62px;
   width: 300px;
-  height: 50px;
   font-family: 'PT Sans Caption', sans-serif;
   font-weight: bold;
   line-height: 50px;
   font-size: 17px;
-
-  background-color: #77ffe1;
+  background-color: #00ffe5;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
 }
 
-.btn,
-.notbtn {
+.not {
   display: block;
-  align-items: center;
-  /*position:*/
+  margin-top: 17px;
+  font-family: 'PT Sans Caption', sans-serif;
+  font-size: 14px;
+  color: white;
+  text-decoration: underline;
 }
