--- a/styleSheets/menubar.css
+++ b/styleSheets/menubar.css
@@ -2,13 +2,9 @@
   width: 100%;
 }
 
-
-.menubar {
-  width: 100%;
-}
-
 .menubar div {
   z-index: 1;
+  overflow: hidden;
   position: fixed;
   display: flex;
   justify-content: center;
@@ -19,12 +15,22 @@
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.menubar div {
-}
 
 .logo {
   display: block;
   width: 84px;
   height: 24px;
   background-image: url(../images/logo.svg);
+}
+
+@media screen and (max-width: 1179px){
+  .logo {
+    width: 58px;
+    height: 17px;
+  }
+
+  .menubar div {
+    height: 42px;
+  }
+
 }
