--- a/styleSheets/layout.css
+++ b/styleSheets/layout.css
@@ -1,4 +1,16 @@
+body.landing * {
+  transition: all .3s ease;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 a {
   text-decoration: none;
   color: inherit;
+}
+
+body {
+  background-color: #FAFAFA;
 }
