--- a/styleSheets/landing.css
+++ b/styleSheets/landing.css
@@ -15,6 +15,7 @@ body.landing.bg {
   flex-direction: column;
   align-items: center;
   overflow: hidden;
+  min-width: 768px;
   margin: 0 auto;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
 }
