--- a/styleSheets/menubar.css
+++ b/styleSheets/menubar.css
@@ -5,9 +5,15 @@
 }
 
 .menubar div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: auto;
   max-width: 1440px;
   height: 60px;
